5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1734_2495.log
== TEST (2019-05-14 17:50:25) 
-- CODE:

num = int(input("Digite um numero: "))
while (num>=0):
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
	print(mensagem)
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 4
    if (CONDIÇÃO DE PARIDADE):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:51:09) 
-- CODE:

num = int(input("Digite um numero: "))
while (num>=0):
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
	print(mensagem)
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:51:33) 
-- CODE:

num = int(input("Digite um numero: "))
while (num>=0):
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
	print(mensagem)
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.162364
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
